Test perf implementado
pom modificado para añadir perf

Signed-off-by: Jonathan Barroeta <jbarroeta@opendeusto.es>